Style: Add Page Loader
Description:
Created page loader suspense to show loading screen while data is being fetched from the server

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,7 +39,7 @@
     display: inline-block;
     aspect-ratio: 1 / 1;
     width: 1.5rem /* 24px */;
-    background-color: #ff7000;
+    background-color: #fff;
     mask-size: 100%;
     mask-repeat: no-repeat;
     mask-position: center;
