--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -39,7 +39,7 @@
     display: inline-block;
     aspect-ratio: 1 / 1;
     width: 1.5rem /* 24px */;
-    background-color: #ff7000;
+    background-color: #fff;
     mask-size: 100%;
     mask-repeat: no-repeat;
     mask-position: center;
