--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -53,3 +53,20 @@
 .loading-lg {
     width: 2.5rem /* 40px */;
 }
+
+.dev-banner {
+    display: none;
+}
+
+.cl-internal-b3fm6y {
+    display: none;
+}
+
+.cl-internal-1niv11v {
+    display: none;
+}
+
+.cl-formButtonPrimary {
+    background-color: #D7A079;
+
+}
